@@ -1,5 +1,10 @@
 2006-09-18  Rodney Dawes  <dobey@novell.com>
 
+	* scripts/gimp.py: Update script to check more dialogs in GIMP, and
+	document a couple LDTP bugs that automating GIMP exposes
+
+2006-09-18  Rodney Dawes  <dobey@novell.com>
+
 	* python/A11yTestUtils.py (__print_properties): Always convert the
 	componentName to utf8 and write out the utf8 to the HTML log
 
